mkswu: soften "automatically set preserve-attributes" info message
This is not really a warning as there is no plan to stop setting this
automatically: make it clear that it is just an informative message.

Change-Id: I463a0558e69b37601598caa8a94f3cf4abe50772

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -395,8 +395,8 @@ msgid "OS is only writable for base/extra_os updates and dest (%s) is not within
 msgstr "%s はボリューム以外に書き込もうとしますが、base/extra_os のアップデート以外にできません。--extra-osを指定してください。"
 
 #: mkswu
-msgid "Warning: automatically setting --preserve-attributes for base_os update"
-msgstr "Warning: base_osアップデートで--preserve-attributesを自動的に設定しました。"
+msgid "Info: automatically setting --preserve-attributes for base_os update"
+msgstr "Info: base_osアップデートで--preserve-attributesを自動的に設定しました。"
 
 #: mkswu
 msgid "%s is not inside %s"
