--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -297,7 +297,7 @@ msgstr ""
 msgid "OS is only writable for base/extra_os updates and dest (%s) is not within volumes. Use --extra-os."
 msgstr ""
 #: mkswu
-msgid "Warning: automatically setting --preserve-attributes for base_os update"
+msgid "Info: automatically setting --preserve-attributes for base_os update"
 msgstr ""
 #: mkswu
 msgid "%s is not inside %s"
