swdesc_option: harden setting SWU keys
- ensure keys are set first
- ensure keys exist early (this would have failed anyway)
- use absolute paths for key files

Change-Id: I8ab365979fe0dbe5692c79e3876c7cf216c23d8c

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -451,6 +451,10 @@ msgid "BOOT_SIZE is no longer used and has been ignored"
 msgstr "BOOT_SIZE は使用されません。無視されます。"
 
 #: mkswu
+msgid "%s must be set before the first swdesc_* action"
+msgstr "%s は swdesc_* コマンドの前に設定してください。"
+
+#: mkswu
 msgid "NO_PRESERVE_FILE is not officially supported and might stop working in the future."
 msgstr "NO_PRESERVE_FILE は正式に対応していません。"
 
