--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -455,6 +455,10 @@ msgid "%s must be set before the first swdesc_* action"
 msgstr "%s は swdesc_* コマンドの前に設定してください。"
 
 #: mkswu
+msgid "Building SWU with public-onetime certificate"
+msgstr "SWU を「誰でも使える」鍵で生成します。"
+
+#: mkswu
 msgid "NO_PRESERVE_FILE is not officially supported and might stop working in the future."
 msgstr "NO_PRESERVE_FILE は正式に対応していません。"
 
