BREAKING CHANGE: only mount /var/app/volumes if used
/var/app/volumes isn't double-copied, so updates mounting it aren't
safe:
- generally speaking, updating /var/app/volumes while used isn't sound:
  if the update fails the data modified there won't come back and it
  might be dangerous
- until swupdate is fixed, swdesc_tar/files updates (archive handler in
  installed directly mode) extracts file while verifying checksum and
  only fails after the archive has been fully extracted; this allows an
  attacker to overwrite arbitrary files in /var/app/volumes if the
  swdesc_file/tar --dest argument includes /var/app/volumes (e.g. /
  updates)

Avoid the issue by strongly discouraging the use of /var/app/volumes in
updates (warning both at mkswu and install time), and only mounting it
if required.

This is a breaking change because the "if required" part of the update
is fragile: we effectively only mount it if /var/app/volumes (or a
subdir of it) is explicitly part of sw-description, that is:
- if a swdesc_file/tar command has a --dest including /var/app/volumes
- if a swdesc_command or similar explicitly refers to it
- for newly generated swu, if swdesc_script's script content contains
/var/app/volumes; older swu files cannot check this at mount time.

Change-Id: Ic7a9639c3be15c20c51308dcb13023ab7775eb22

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -967,6 +967,18 @@ msgid "place it before the commands you want to run?"
 msgstr "設定するコマンドの前に実行してください。"
 
 #: mkswu
+msgid "Warning: update is using /var/app/volumes"
+msgstr "Warning: /var/app/volumes をアップデートしているようです。"
+
+#: mkswu
+msgid "It is not safe to modify /var/app/volumes while the system uses it,"
+msgstr "アップデート中に /var/app/volumes を使用すると故障の恐れがありますので、"
+
+#: mkswu
+msgid "consider using /var/app/rollback/volumes instead"
+msgstr "代わりに /var/app/rollback/volumes をご利用ください。"
+
+#: mkswu
 msgid "You have sideloaded containers, copy all these files to USB drive:"
 msgstr "以下のファイルをUSBメモリにコピーしてください："
 
