swdesc_tar: add --base-os option
Talking about components in manual is confusing, the user should be able
to set version once through swdesc_option version=x and then only use
normal commands with a few switches without repeating the version:
- add a --base-os switch so user can do `swdesc_tar --base-os foo.tar`
- replace error when version is not x.y.z-t by a warning

Change-Id: I6bc54da4a540eeee537183f7ca3485685490cbbf

--- a/README
+++ b/README
@@ -98,6 +98,9 @@ Common options for all helpers:
   read-write. This is not required if version is set explicitly,
   and has no effect if set before version.
 
+--base-os
+  set component to 'base_os'. This is intended for OS updates only.
+
 --install-if <mode>
   mode can be one of higher or different.
   Can also set the "install_if" environment variable.
