--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (6.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 24 May 2024 10:20:27 +0900
+
 mkswu (6.0) experimental; urgency=medium
 
   * upstream update (see changelog)
