mkswu: error for items with no version set
This used to generate a warning that we will stop supporting this
in 2024/05: print an error instead.

Change-Id: Ic7a9f52ddba7832d3fe9a14ba512d21b1532c948

--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -204,13 +204,7 @@ msgstr ""
 msgid "Checksumming %s failed"
 msgstr ""
 #: mkswu
-msgid "Warning: item was set without version:\\n%s"
-msgstr ""
-#: mkswu
-msgid "This will stop working in %s update"
-msgstr ""
-#: mkswu
-msgid "Please set a version (e.g. global swdesc_option version=...)"
+msgid "item was set without version:\\n%s\\nPlease set a version (e.g. global swdesc_option version=...)"
 msgstr ""
 #: mkswu
 msgid "version %s was set without associated component:\\n%s"
@@ -388,9 +382,6 @@ msgid "HW_COMPAT must be set"
 msgstr ""
 #: mkswu
 msgid "above component used multiple times with different versions or install-if mode"
-msgstr ""
-#: mkswu
-msgid "No versions found: use '--version x y' or 'swdesc_option version=y'"
 msgstr ""
 #: mkswu
 msgid "invalid ROOTFS_FSTYPE \"%s\", must be empty, ext4 or btrfs"
