--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -271,16 +271,8 @@ msgid "Checksumming %s failed"
 msgstr "%s のチェックサムの生成ができませんでした。"
 
 #: mkswu
-msgid "Warning: item was set without version:\\n%s"
-msgstr "Warning: バージョンは設定されませんでした：\\n%s"
-
-#: mkswu
-msgid "This will stop working in %s update"
-msgstr "この指定方法は、%s のアップデートで利用できなくなります。"
-
-#: mkswu
-msgid "Please set a version (e.g. global swdesc_option version=...)"
-msgstr "swdesc_option version=... 等でバージョンを設定してください"
+msgid "item was set without version:\\n%s\\nPlease set a version (e.g. global swdesc_option version=...)"
+msgstr "バージョンが設定されていません:\\n%s\\nswdesc_option version=... 等でバージョンを設定してください"
 
 #: mkswu
 msgid "version %s was set without associated component:\\n%s"
@@ -517,10 +509,6 @@ msgstr "HW_COMPAT変数を設定してください。"
 #: mkswu
 msgid "above component used multiple times with different versions or install-if mode"
 msgstr "上記のコンポーネントは別のバージョンかinstall-ifですでに利用されています。"
-
-#: mkswu
-msgid "No versions found: use '--version x y' or 'swdesc_option version=y'"
-msgstr "バージョンが見つかりませんでした。'--version x y' か 'swdesc_option version=y' を使用してください。"
 
 #: mkswu
 msgid "invalid ROOTFS_FSTYPE \"%s\", must be empty, ext4 or btrfs"
