mkswu: retry signature up to 3 times
ABOSDE's [ Generate develoment/release swu ] runs mkswu after building
the container image.
If the user fails to enter the password for signing at least once with
mkswu, the user must run [ Generate develoment/release swu ] again.

This is inconvenient as it can take time to re-build artifacts, so
allow up to three attempts to re-enter signature password.

Redmine: 63882
Change-Id: Ic98acd72f5995c978a73003ea8386d4db339c412

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -547,6 +547,14 @@ msgid "Could not sign %s"
 msgstr "%s に署名できませんでした。"
 
 #: mkswu
+msgid "File signature failed, was the password correct?"
+msgstr "ファイルの署名に失敗しました。パスワードは間違っていませんか？"
+
+#: mkswu
+msgid "Retrying %s more time(s)."
+msgstr "あと %s 回再試行できます。"
+
+#: mkswu
 msgid "Signature verification failed for $file"
 msgstr "%s の証明確認が失敗しました"
 
