--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (6.2) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 20 Jun 2024 13:43:21 +0900
+
 mkswu (6.1) experimental; urgency=medium
 
   * upstream update (see changelog)
