--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (6.2.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 25 Jun 2024 08:51:58 +0900
+
 mkswu (6.2) experimental; urgency=low
 
   * upstream update (see changelog)
