mkswu: add option to generate sbom
Add 'swdesc_option BUILD_SBOM' to configure whether to build sbom.

If sbom is built, all artefacts (files, containers, scripts) in swu are
scanned with make_sbom.sh and a sbom is automatically generated

- `swdesc_option sbom_config_yaml=...` can be used to use a non-default
  config.yaml
- `swdesc_sbom_source_file ...`  can be used to add extra files to scan

Change-Id: I30d55cdc01b7df66002e4ce4eaa5f6f7c9f779fe

--- a/README
+++ b/README
@@ -74,6 +74,13 @@ swdesc_option ALLOW_PUBLIC_CERT
     installed, in which case public cert is left enabled
 
 
+swdesc_option BUILD_SBOM=<mode>
+    - no (default): do not create sbom
+    - auto: create sbom if make_sbom.sh command is present
+    - yes: create sbom
+swdesc_option sbom_config_yaml=<path>
+    Specify config.yaml to use for create sbom. Default use /usr/share/make-sbom/config/config.yaml.
+
 Common options for all helpers:
 
 --version <component> <version>
@@ -192,6 +199,8 @@ swdesc_usb_container <image archive>
 swdesc_pull_container <image url>
   Pull container from network into storage
 
+swdesc_sbom_source_file <path>
+  Specify source file to add to sbom.
 
 ## podman_partial_image
 
