mkswu: write 'chunked_sha256' in sw-description
- add chunked hashes as well as normal hash
- we don't save it for 'exec' type that has an intermediate copy
written anyway: this avoids sw-description growing by ~70K/GB of
data
- add test for it
- while here move sbom test a bit later, this will fail faster in
case of generation problem

Change-Id: Ic361e8cc87a19b668bd0208a8656c318fb13ef0c

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -279,6 +279,10 @@ msgid "Could not write %s"
 msgstr "%s に書込みできませんでした。"
 
 #: mkswu
+msgid "Unexpected number of chunked sha256s for %s (real %s / expected %s)"
+msgstr "%s のチェックサム数が想定外です（行数 %s / 想定 %s)"
+
+#: mkswu
 msgid "item was set without version:\\n%s\\nPlease set a version (e.g. global swdesc_option version=...)"
 msgstr "バージョンが設定されていません:\\n%s\\nswdesc_option version=... 等でバージョンを設定してください"
 
