--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -267,8 +267,16 @@ msgid "Could not generate an iv to encrypt %s"
 msgstr "%s の暗号化の iv を生成できませんでした。"
 
 #: mkswu
+msgid "Could not stat %s"
+msgstr "%s を確認できませんでした。"
+
+#: mkswu
 msgid "Checksumming %s failed"
 msgstr "%s のチェックサムの生成ができませんでした。"
+
+#: mkswu
+msgid "Could not write %s"
+msgstr "%s に書込みできませんでした。"
 
 #: mkswu
 msgid "item was set without version:\\n%s\\nPlease set a version (e.g. global swdesc_option version=...)"
