--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,16 @@
+6.5
+===
+fixes:
+ - fix copy of uid>=1000 user that don't have a password.
+   Install normally fails if such users exist, but if the password is set
+   to expire immediately on login then we now allow it.
+   (uid<1000 users are not copied anyway)
+
+features:
+ - add support for i.MX8ULP boot images
+
+  -- 2024-10-25
+
 6.4
 ===
 fixes:
