--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.0) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 15 Nov 2024 15:04:05 +0900
+
 mkswu (6.5) experimental; urgency=medium
 
   * upstream update (see changelog)
