mkswu: add swdesc_option until=<date>
This can be useful for security-minded people.

Change-Id: I0f2ca6b4242d93f90f2f295ae008df09cf09c7c7

--- a/README
+++ b/README
@@ -72,6 +72,10 @@ swdesc_option ALLOW_EMPTY_LOGIN
 swdesc_option ALLOW_PUBLIC_CERT
     (for test only) allow update to install if no user certificate has been
     installed, in which case public cert is left enabled
+swdesc_option until=<date>
+    set time limit for install validity (in any format 'date -d' recognizes,
+    this is stored as unix timestamp internally)
+    Note update will fail if time is not synchronized.
 
 
 swdesc_option BUILD_SBOM=<mode>
