--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -495,6 +495,10 @@ msgid "%s must be set before the first swdesc_* action"
 msgstr "%s は swdesc_* コマンドの前に設定してください。"
 
 #: mkswu
+msgid "swdesc_option until=%s was not in a format 'date -d' understands"
+msgstr "swdesc_option until=%s は 'date -d' が認識できませんでした。"
+
+#: mkswu
 msgid "Building SWU with public-onetime certificate"
 msgstr "SWU を「誰でも使える」鍵で生成します。"
 
