--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.2) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 21 Feb 2025 10:29:29 +0900
+
 mkswu (7.1) experimental; urgency=medium
 
   * upstream update (see changelog)
