--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+7.3
+===
+fixes:
+- allow zstd to overwrite temporary files if any was left over
+- avoid using podman stop, which does not work well in separate mount
+  namespaces since podman 5.2.1
+
+  -- 2025-03-04
+
 7.2
 ===
 fixes:
@@ -10,7 +19,7 @@ fixes:
 - disable USER_CERTS when using swdesc_option PUBLIC (we do not want
   to overwrite users's certs in this case)
 
-  -- 20205-02-21
+  -- 2025-02-21
 
 7.1
 ===
