--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.3) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 04 Mar 2025 15:18:30 +0900
+
 mkswu (7.2) experimental; urgency=medium
 
   * upstream update (see changelog)
