--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.6) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 21 Apr 2025 14:38:30 +0900
+
 mkswu (7.5) experimental; urgency=medium
 
   * upstream update (see changelog)
