--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+7.6.1
+=====
+fixes:
+- add sim7672-boot to swupdate_preserve_files to avoid accidental
+disable of LTE service
+
+  -- 2025-05-12
+
 7.6
 ===
 features:
