--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.6.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 12 May 2025 10:30:42 +0900
+
 mkswu (7.6) experimental; urgency=medium
 
   * upstream update (see changelog)
