--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.6.2) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 19 May 2025 13:15:25 +0900
+
 mkswu (7.6.1) experimental; urgency=medium
 
   * upstream update (see changelog)
