mkswu: fix message about upgradable containers
GW container remove pre-install will end in 2025/06.
But, exists upgradable containers (GW / Node-RED).

Redmine: 69341
Change-Id: Ia94900fe6eff2f23a47718c6cbfa2e959a1f91d6

--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -633,7 +633,7 @@ msgstr ""
 msgid "Could not copy initial_setup.desc from example dir"
 msgstr ""
 #: mkswu
-msgid "Enable auto-updates (BaseOS / pre-installed containers) from armadillo.atmark-techno.com servers? (N/y)"
+msgid "Enable auto-updates (BaseOS / upgradable containers) from armadillo.atmark-techno.com servers? (N/y)"
 msgstr ""
 #: mkswu
 msgid "Select update frequency ([weekly]/daily)"
