--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -843,8 +843,8 @@ msgid "Could not copy initial_setup.desc from example dir"
 msgstr "initial_setup.descをコピーできませんでした。"
 
 #: mkswu
-msgid "Enable auto-updates (BaseOS / pre-installed containers) from armadillo.atmark-techno.com servers? (N/y)"
-msgstr "BaseOS/プリインストールコンテナを armadillo.atmark-techno.com サーバーから自動アップデートしますか？ (N/y)"
+msgid "Enable auto-updates (BaseOS / upgradable containers) from armadillo.atmark-techno.com servers? (N/y)"
+msgstr "BaseOS/アップデート可能なコンテナを armadillo.atmark-techno.com サーバーから自動アップデートしますか？ (N/y)"
 
 #: mkswu
 msgid "Select update frequency ([weekly]/daily)"
