--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.7) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 22 Aug 2025 13:07:25 +0900
+
 mkswu (7.6.2) experimental; urgency=medium
 
   * upstream update (see changelog)
