mkswu/versions: downgrade version changed message to info
Link: https://armadillo.atmark-techno.com/forum/armadillo/26030
Change-Id: I1274b0d75fffb96455633b284da126bb239f15a5

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -247,8 +247,8 @@ msgid "install_if must be higher or different"
 msgstr "install_if には「higher」か「different」を指定してください。"
 
 #: mkswu
-msgid "Warning: %s version %s has been simplified to %s"
-msgstr "Warning: %s のバージョン %s は %s に略されました。"
+msgid "%s version %s has been simplified to %s"
+msgstr "%s のバージョン %s は %s に略されました。"
 
 #: mkswu
 msgid "failed to compress %s"
