--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -186,7 +186,7 @@ msgstr ""
 msgid "install_if must be higher or different"
 msgstr ""
 #: mkswu
-msgid "Warning: %s version %s has been simplified to %s"
+msgid "%s version %s has been simplified to %s"
 msgstr ""
 #: mkswu
 msgid "failed to compress %s"
