--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.8) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 22 Sep 2025 10:01:44 +0900
+
 mkswu (7.7.1) experimental; urgency=medium
 
   * upstream update (see changelog)
