swdesc_boot: ignore versions set from swdesc_option version
swdesc_boot overrides any provided component from swdesc_option,
it should also ignore such versions to avoid ending up with something
like 'boot 1.1' and not being able to update imx-boot.

This has apparently never worked as intended; it's possible this change
will break some setups (silently downgrade from provided version to the
embedded one), so print a warning if the outer version was set and higher
than what we found.
(Thanksfully versions higher than 2020.4 should be rare enough...)

Warning example in English and Japanese:

Warning: Version found in '../imx-boot_armadillo_x2', '2020.4-at.2.2.00001+g16be576a6d2a-ge7d8a230e98e',
is lower than '2025.10' provided in swdesc_option version=2025.10
Up until mkswu 7.8 images would have been built with '2025.10' so this might
cause images to fail to install.
If you want to set the version, use swdesc_boot --version boot '2025.10'
to explicitly set the version.
If this is intended you can set 'WARNING_ACK_OUTER_BOOT_VERSION=1' to silence this warning.

Warning: '../imx-boot_armadillo_x2' に組み込まれてるバージョン（2020.4-at.2.2.00001+g16be576a6d2a-ge7d8a230e98e）
は指定された'2025.10'（swdesc_option version=2025.10）より低いです。
mkswu 7.8 までは 2025.10 でイメージをビルドしていましたので、
更新によってアップデートできなくなる可能性があります。
指定されたバージョンを利用したい場合は swdesc_boot --version boot '2025.10'
で明示的に設定してください。
今の動作で問題なければこの警告を 'WARNING_ACK_OUTER_BOOT_VERSION=1' で無効化できます。

Link: https://armadillo.atmark-techno.com/forum/armadillo/27897
Change-Id: I8681e78d4f10c2578149be506baf4cb282efa6b9

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -407,8 +407,40 @@ msgid "Unrecognized boot image format for %s"
 msgstr "%s ブートイメージフォーマットを認識できませんでした。"
 
 #: mkswu
-msgid "Could not guess boot version in %s"
-msgstr "ブートバージョン %s を認識できませんでした。"
+msgid "Could not guess boot version in '%s'"
+msgstr "'%s' のバージョンを認識できませんでした。"
+
+#: mkswu
+msgid "Required file not found: %s"
+msgstr "%s が存在しません。"
+
+#: mkswu
+msgid "Warning: Version found in '%s', '%s',"
+msgstr "Warning: '%s' に組み込まれてるバージョン（%s）"
+
+#: mkswu
+msgid "is lower than '%s' provided in swdesc_option version=%s"
+msgstr "は指定された'%s'（swdesc_option version=%s）より低いです。"
+
+#: mkswu
+msgid "Up until mkswu 7.8 images would have been built with '%s' so this might"
+msgstr "mkswu 7.8 までは %s でイメージをビルドしていましたので、"
+
+#: mkswu
+msgid "cause images to fail to install."
+msgstr "更新によってアップデートできなくなる可能性があります。"
+
+#: mkswu
+msgid "If you want to set the version, use swdesc_boot --version boot '%s'"
+msgstr "指定されたバージョンを利用したい場合は swdesc_boot --version boot '%s'"
+
+#: mkswu
+msgid "to explicitly set the version."
+msgstr "で明示的に設定してください。"
+
+#: mkswu
+msgid "If this is intended you can set '%s' to silence this warning."
+msgstr "今の動作で問題なければこの警告を '%s' で無効化できます。"
 
 #: mkswu
 msgid "Version must be set for swdesc_boot_encrypted"
@@ -489,10 +521,6 @@ msgstr "Warning: podmanでは、圧縮するとコピーの回数が増えます
 #: mkswu
 msgid "you might want to keep the archive as simple .tar"
 msgstr "普通のtarアーカイブにした方が効率的です。"
-
-#: mkswu
-msgid "Required file not found: %s"
-msgstr "%s が存在しません。"
 
 #: mkswu
 msgid "Invalid value for %s: %s"
