--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.9) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 27 Oct 2025 17:33:49 +0900
+
 mkswu (7.8) experimental; urgency=medium
 
   * upstream update (see changelog)
