--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.10) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 22 Dec 2025 11:25:43 +0900
+
 mkswu (7.9) experimental; urgency=medium
 
   * upstream update (see changelog)
