--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -168,7 +168,7 @@ msgstr ""
 msgid "version check failed for %s: %s must not mix alpha and digits, e.g.:\\n\\t1.2.3-rc.4\\n\\t1.2.3.4\\n\\t1.2.3-4"
 msgstr ""
 #: mkswu
-msgid "version %s has too many digit components, please use somthing else"
+msgid "version %s has too many digit components, please use something else"
 msgstr ""
 #: mkswu
 msgid "metadata (+ part) in %s while valid semver are ignored by swupdate, please use something else"
@@ -252,7 +252,7 @@ msgstr ""
 msgid "post-baseos extraction (e.g. swupdate_preserve_files POST step) will run after"
 msgstr ""
 #: mkswu
-msgid "the first occurence so the result might be unexpected."
+msgid "the first occurrence so the result might be unexpected."
 msgstr ""
 #: mkswu
 msgid "Warning: 'base_os' update listed after '%s'"
