--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (7.11) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 26 Jan 2026 12:58:37 +0900
+
 mkswu (7.10) experimental; urgency=medium
 
   * upstream update (see changelog)
