--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (8.0) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 19 Feb 2026 17:23:45 +0900
+
 mkswu (7.11.1) experimental; urgency=medium
 
   * upstream update (see changelog)
