--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+8.0.1
+=====
+fixes:
+- fix cleanup not being executed due to script directory change in 8.0 when
+ATDE version is >= ABOS version
+
+  -- 2026-02-25
+
 8.0
 ===
 fixes:
