--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (8.0.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Wed, 25 Feb 2026 14:24:23 +0900
+
 mkswu (8.0) experimental; urgency=medium
 
   * upstream update (see changelog)
